@@ -23,6 +23,10 @@ Version 8.39 xx-xxxxxx-201x
 
 5.  Allow for up to 32-bit numbers in the ordin() function in pcregrep.
 
+6 . An empty \Q\E sequence between an item and its qualifier caused
+    pcre_compile() to misbehave when auto callouts were enabled. This bug was
+    found by the LLVM fuzzer.
+
 
 Version 8.38 23-November-2015
 -----------------------------
